
MINOR
  * analyze(), modulationSpectrum(): new outputs "amFreq" and "amDep" give the frequency and depth of amplitude modulation
  * switch from Seeing Speech to Hillenbrand 1995 for vowel centroids in formant_app()
  * getSmoothContour(): downsampling is preceeded by low-pass filtering to avoid aliasing
  * formant_app(): adjustable playback speed
  * reportTime() and all loops that use it: max two time levels shown (eg days + hours)

BUGS FIXED:
  * formant_app(): vowel plot, VTL updated in output table, synthetic audio playback with browser, NAs not filled in user annotations
  * formant_app(), pitch_app(): bug-prone "overlap" setting removed, use "step" instead
  * ssm(): silence has novelty = 0


          CHANGES IN SOUNDGEN VERSION 2.0.0 [15-March-2021]
This version represents an attempt to standardize and better integrate all functions for acoustic analysis in the package. Functions for sound synthesis, notably soundgen(), are not affected by these structural changes and remain fully back-compatible.

GLOBAL (seriously affects back-compatibility):
  * Functions analyzeFolder(), spectrogramFolder(), segmentFolder(), modulationSpectrumFolder(), getRMSFolder(), getLoudnessFolder() are deprecated.
  * Instead, analyze(), spectrogram(), osc(), segment(), modulationSpectrum(), getRMS(), getLoudness(), ssm(), playme(), etc. accept as input either a single sound (numeric vector, Wave object, or filename) or multiple sounds (a list of vectors or Wave objects, multiple filenames like "c(file1, file2)"", or path to folder with audio files).
  * Functions for acoustic analysis return lists with both detailed results and summaries; for example, analyze() returns a list with two components: "$detailed" (frame-by-frame acoustic measures, one dataframe per file) and "$summary" (summaries based on "summaryFun", one row per file).